--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,55 @@
+* {
+  margin: 0;
+  font-family: "SF-PRO-DISPALY";
+}
+
+@font-face {
+  font-family: "SF-PRO-DISPALY";
+  src: url(./font/SF-PRO-DISPLAY-REGULAR.OTF);
+}
+
 body {
-  margin: 0px;
   background-color: #2b2b2b;
 }
 
 .cal-wrap {
-  width: 318.4px;
-  margin: 100px auto;
-  padding: 20px;
+  width: 320px;
+  margin: 200px auto;
+  padding: 10px;
   background-color: white;
+  border-radius: 9px;
 }
 
 .cal-function {
-  background-color: #cdcdcd;
+  background-color: #b3b3b3;
 }
 
 .cal-button {
+  font-size: 20px;
   height: 75px;
   width: 75px;
   border: 0px;
+  border-radius: 4px;
+}
+
+.cal-math {
+  background-color: #ffa600b2;
+}
+
+.cal-button-zero {
+  width: 100%;
 }
 
 .cal-button:hover {
   background-color: grey;
 }
 
-.cal-display {
-  height: 75px;
-  width: 100%;
-  border: 0px;
-  text-align: right;
-  font-size: 25px;
-  font-weight: 400;
-  color: grey;
+.cal-math:hover {
+  background-color: #ffa600f1;
 }
 
-.cal-display-sol {
-  height: 50px;
-  width: 100%;
-  border: 0px;
-  text-align: right;
-  font-size: 40px;
-  font-weight: 400;
+.cal-number:hover {
+  background-color: #d6d6d6;
 }
 
 .cal-sol {
@@ -49,4 +58,30 @@ body {
 
 .cal-sol:hover {
   background-color: #1fa7ff;
+}
+
+.cal-display {
+  height: 50px;
+  width: 98%;
+  border: 0px;
+  padding: 0px;
+  text-align: right;
+  font-size: 35px;
+  font-weight: 400;
+  line-height: 0;
+  color: grey;
+  pointer-events: none;
+}
+
+.cal-display-sol {
+  height: 75px;
+  width: 98%;
+  padding: 0px;
+  padding-bottom: 10px;
+  border: 0px;
+  text-align: right;
+  font-size: 50px;
+  font-weight: 400;
+  line-height: 0;
+  pointer-events: none;
 }
