--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,8 @@ body {
 }
 
 .cal-math {
-  background-color: #ffa600b2;
+  color: #ffffff;
+  background-color: #ffba3b;
 }
 
 .cal-button-zero {
@@ -45,7 +46,7 @@ body {
 }
 
 .cal-math:hover {
-  background-color: #ffa600f1;
+  background-color: #ffae00;
 }
 
 .cal-number:hover {
@@ -53,6 +54,8 @@ body {
 }
 
 .cal-sol {
+  color: #ffffff;
+
   background-color: #85c1e8;
 }
 
@@ -61,27 +64,23 @@ body {
 }
 
 .cal-display {
-  height: 50px;
-  width: 98%;
-  border: 0px;
-  padding: 0px;
-  text-align: right;
-  font-size: 35px;
-  font-weight: 400;
-  line-height: 0;
-  color: grey;
-  pointer-events: none;
-}
-
-.cal-display-sol {
-  height: 75px;
+  height: 100px;
   width: 98%;
   padding: 0px;
   padding-bottom: 10px;
   border: 0px;
   text-align: right;
-  font-size: 50px;
+  font-size: 75px;
   font-weight: 400;
   line-height: 0;
   pointer-events: none;
+}
+
+.active {
+  background-color: #ff8800 !important;
+}
+
+.disable {
+  color: #868686 !important;
+  background-color: rgb(231, 231, 231) !important;
 }
