--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@ body {
 }
 
 .cal-function {
-  background-color: #b3b3b3;
+  color: #ffffff;
+  background-color: #9b9b9b;
 }
 
 .cal-button {
@@ -37,6 +38,10 @@ body {
   background-color: #ffba3b;
 }
 
+.cal-number {
+  background-color: rgb(211, 211, 211);
+}
+
 .cal-button-zero {
   width: 100%;
 }
@@ -50,12 +55,11 @@ body {
 }
 
 .cal-number:hover {
-  background-color: #d6d6d6;
+  background-color: #b9b9b9;
 }
 
 .cal-sol {
   color: #ffffff;
-
   background-color: #85c1e8;
 }
 
@@ -70,7 +74,7 @@ body {
   padding-bottom: 10px;
   border: 0px;
   text-align: right;
-  font-size: 75px;
+  font-size: 60px;
   font-weight: 400;
   line-height: 0;
   pointer-events: none;
@@ -81,6 +85,6 @@ body {
 }
 
 .disable {
-  color: #868686 !important;
-  background-color: rgb(231, 231, 231) !important;
+  color: #b1b1b1 !important;
+  background-color: rgb(216, 216, 216) !important;
 }
